	updated getSwProc().
	* StepDialog.java: Added.
	* SourceWindowFactory.java (SourceWinBlocker.existingTask): 
	Built in ability to handle step events and re-generate 
	SourceWindow content upon completion of stepping for all 
	Tasks.
	(finishSourceWin): Calls update getSwProc().
	(SourceWinListener.lifeCycleQuery): Ditto.
	(handleTask): Taken out of a second unnecessary CustomEvents
	 event.
	* SourceWindow.java (unblockProc): Added a 
	requestDeleteTerminatingObserver call to handle the update 
	to ProcBlockObserver.
	(step): Added. Unblocks tasks under an InstructionObserver.
	(stepCompleted): Added. Re-sensitizes the SourceWindow after
	step completion.
	(executeTasks): Refactored from executeThreads(). Removed
	obsolete boolean checks.
	(SourceWindow): Added a StepDialog reference. General clean-up
	of constructor and class.
	(createActions): Added Listener for StepDialog.
	(toggleStepDialog): Added.
	(createMenus): Added MenuItem for StepDialog.
	(mainThreadReblocked): Removed.
	(setMyTask): Removed.
	(getMyTask): Removed.
	(getSwProc): Refactored from getMyproc().
	(setSwProc): Refactored from setMyProc().
	(stepMainThread): Removed.
	(createActions): Removed toggleMainThread Action.
	(procReblocked): Changed to protected.

2006-11-01  Mike Cvet  <mcvet@redhat.com>

	* SourceWindowFactory.java (SourceWinBlocker.existingTask): 
	Checks to see if this request is from an instruction step,
	and handles that case appropriately.
	* SourceWindow.java (toggleThreadDialog): Removed HashSet
	intialization and moved it to the constructor.
	(doStop): Remove all threads from the runningThreads
	HashSet and then block them.
	(unblockProc): Add all threads to runningThreads, unless
	they're already running via other means.
	(InstructionObserver): Removed. Handled in 
	SourceWindowFactory.SourceWinBlocker instead.
	(getSteppingState): Added.
	(stepped): Added.
	(stepMainThread): Added.
	(toggleMainThread): Removed.

2006-10-31  Mike Cvet  <mcvet@redhat.com>
